--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Nick Lashinsky's Online Presence 
+title: Nick Lashinsky's online presents 
 email: lashinsky.nick@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   a blog from the trenches of product development, sales and startups in silicon valley
@@ -10,3 +10,8 @@ github_username:  nlashinsky
 
 # Build settings
 markdown: kramdown
+
+defaults: 
+- 
+layout: "default"
+`
